# selective_goal_checker

./: .gitignore  CMakeLists.txt  README.md  package.xml  selective_goal_checker.xml
include/seletive_goal_checker/: selective_goal_checker.hpp
src/: selective_goal_checker.cpp
